# canvas

./: .gitignore  CMakeHelpers.txt  CMakeLists.txt  main.cpp  notes.md  run_tests.sh
camera/: CMakeLists.txt  camera.cpp  camera.h
hitable/: CMakeLists.txt  aabb.h  bvh_node.cpp  bvh_node.h  cube.cpp  cube.h  hitable.h  hitable_list.cpp  hitable_list.h  plane.cpp  plane.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  triangle_mesh.cpp  triangle_mesh.h
light/: CMakeLists.txt  ambient_light.cpp  ambient_light.h  light.h  point_light.cpp  point_light.h
material/: CMakeLists.txt  dielectric.cpp  dielectric.h  lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h
tests/: CMakeLists.txt
tests/util/: CMakeLists.txt  ray_tests.cpp  vec3_tests  vec3_tests.cpp
util/: CMakeLists.txt  aabb.cpp  aabb.h  helpers.cpp  helpers.h  image.cpp  image.h  kd_node.cpp  kd_node.h  obj_parser.cpp  obj_parser.h  ray.cpp  ray.h  scene.cpp  scene.h  vec3.cpp  vec3.h  worker.cpp  worker.h
